Run with Java 21 and use Java 21 features (#3954)